--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-head
-h1 { text-align: center; 
+header { 
+ text-align: center; 
 
 }
+body  {
+    background-color: rgb(0, 200, 255) ;
+
+}
+
+
+img {
+   width: 800px;
+ }
+
+ main {
+    text-align: center;
+
+ }
